<resources>

    <string name="caption_summary">Summary: %s</string>
    <string name="caption_target">Target: %s</string>

    <string name="prefs_caption_working_days">Working days</string>
    <string name="prefs_summary_working_days">Default working days of week</string>
    <string name="prefs_caption_target_min">Target time</string>
    <string name="prefs_summary_target_min">Default target time for one day in minutes</string>
    <string name="prefs_caption_round_to">Round duration</string>
    <string name="prefs_summary_round_to">Round duration to specified value in minutes when copy to clipboard</string>
    <string name="prefs_caption_sync_start_end_date">Synchronize date</string>
    <string name="prefs_summary_sync_start_end_date">Synchronize start/end date while editing</string>

    <string name="menu_delete_selected">Delete selected</string>
    <plurals name="title_session_selected">
        <item quantity="one">%s session selected</item>
        <item quantity="other">%s sessions selected</item>
    </plurals>
    <string name="msg_session_started">Session started.</string>
    <string name="msg_session_stopped">Session stopped.</string>
    <string name="msg_day_description_saved">Data saved</string>
    <string name="msg_day_description_unable_save">Cannot save data</string>

    <string name="appwidget_text_week_empty">Week:</string>
    <string name="appwidget_text_today_empty">Today:</string>
    <string name="appwidget_text_today">Today: %s</string>
    <string name="appwidget_text_week">Week: %s</string>
    <string name="appwidget_text_state_opened">Opened</string>
    <string name="appwidget_text_state_closed">Closed</string>
    <string name="msg_selected_session_will_removed">Selected sessions will be removed.</string>
    <string name="msg_all_session_will_removed">All sessions will be removed.</string>
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="action_save">Save</string>
    <string name="action_select_date">Select date</string>
    <string name="msg_cannot_copy_to_clipboard">Cannot copy to clipboard</string>
    <string name="msg_selected_items_copied_to_clipboard">Selected item copied to clipboard</string>
    <string name="nav_sessions">Sessions</string>
    <string name="nav_days">Days</string>
    <string name="nav_settings">Settings</string>
    <string name="action_group_by">Group by</string>
    <string name="msg_group_by">Show sessions by</string>
    <string name="msg_no_sessions_for_date">No sessions for selected date range</string>
    <string name="label_session_list">Sessions list</string>
    <string name="label_edit_session">Edit session</string>
    <string name="label_dates_view">Days</string>
    <string name="label_edit_date">Edit day</string>
    <string name="label_preferences">Settings</string>
    <string name="msg_cannot_backup_db">Cannot backup database</string>
    <string name="msg_cannot_restore_db">Cannot restore database</string>
    <string name="msg_backup_db_succeeded">Database backup completed</string>
    <string name="msg_restore_db_succeeded">Database restored</string>
    <string name="msg_backup_db_cancelled">Database backup cancelled</string>
    <string name="msg_restore_db_cancelled">Database restoring cancelled</string>
    <string name="msg_external_storage_unavailable">External storage unavailable</string>
    <string name="prefs_caption_category_backup">Backup</string>
    <string name="prefs_caption_backup">Backup</string>
    <string name="prefs_summary_backup">Backup database to external storage</string>
    <string name="prefs_caption_restore">Restore</string>
    <string name="prefs_summary_restore">Restore database from external storage</string>
    <string name="prefs_caption_category_common">Common</string>
    <string name="fill_with_fake_sessions">Fill with fake sessions</string>
    <string name="lbl_edt_date_target_time">Target Time</string>
    <string name="lbl_edit_date_working_day">Working day</string>
    <string name="img_description_summary">Summary</string>
    <string name="img_description_target">Target</string>
    <string name="img_description_end_time">End time</string>
    <string name="img_description_start_time">Start time</string>
    <string name="img_description_duration">Duration</string>
</resources>
